restructure repo