@@ -1,21 +1,3 @@
-/*
-   Licensed to the Apache Software Foundation (ASF) under one
-   or more contributor license agreements.  See the NOTICE file
-   distributed with this work for additional information
-   regarding copyright ownership.  The ASF licenses this file
-   to you under the Apache License, Version 2.0 (the
-   "License"); you may not use this file except in compliance
-   with the License.  You may obtain a copy of the License at
-
-     http://www.apache.org/licenses/LICENSE-2.0
-
-   Unless required by applicable law or agreed to in writing,
-   software distributed under the License is distributed on an
-   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-   KIND, either express or implied.  See the License for the
-   specific language governing permissions and limitations
-   under the License.    
- */
 package org.opentides.bean;
 
 import java.io.Serializable;
@@ -28,14 +10,13 @@ import javax.persistence.Table;
 import javax.persistence.Transient;
 
 
+@Entity
+@Table(name="SYSTEM_CODES")
 /**
  * The system codes class is a lookup table used for drop-downs.
  * Developer must ensure category is consistently used in the application.
  */
-@Entity
-@Table(name="SYSTEM_CODES")
-public class SystemCodes extends BaseProtectedEntity 
-	implements Serializable, BaseCriteria, Auditable, Sortable {
+public class SystemCodes extends BaseEntity implements Serializable, BaseCriteria, Auditable {
 	
 	private static final long serialVersionUID = -4142599915292096152L;
 	private static final int CATEGORY_LIST_LENGTH = 52;
@@ -50,12 +31,6 @@ public class SystemCodes extends BaseProtectedEntity
 	private String category;
 	
 	@Transient
-	private transient String orderOption;
-	
-	@Transient
-	private transient String orderFlow;
-	
-	@Transient
 	private transient String auditMessage = "";
 	
 	@Transient
@@ -63,8 +38,21 @@ public class SystemCodes extends BaseProtectedEntity
 	
 	public SystemCodes() {
 	}
-
-	@Deprecated
+	
+	public SystemCodes(String category, String key, String value) {
+		super();
+		setCategory(category);
+		this.key = key;
+		this.value = value;
+	}	
+	
+	public SystemCodes(SystemCategory systemCategory, String key, String value) {
+		super();
+		setCategory(systemCategory.toString());
+		this.key = key;
+		this.value = value;
+	}
+	
 	public SystemCodes(SystemCategory systemCategory, String key) {
 		super();
 		setCategory(systemCategory.toString());
@@ -74,38 +62,6 @@ public class SystemCodes extends BaseProtectedEntity
 	public SystemCodes(String key) {
 		super();
 		this.key = key;
-	}
-
-	
-	public SystemCodes(String category, String key, String value) {
-		super();
-		setCategory(category);
-		this.key = key;
-		this.value = value;
-	}
-	
-	public SystemCodes(String category, String key, String value, boolean skipAudit) {
-		super();
-		setCategory(category);
-		this.key = key;
-		this.value = value;
-		this.skipAudit=skipAudit;
-	}
-	
-    @Deprecated
-	public SystemCodes(SystemCategory systemCategory, String key, String value) {
-		super();
-		setCategory(systemCategory.toString());
-		this.key = key;
-		this.value = value;
-	}
-	
-	/* (non-Javadoc)
-	 * @see java.lang.Object#toString()
-	 */
-	@Override
-	public String toString() {
-		return key +":"+value;
 	}
 
 	/**
@@ -154,19 +110,19 @@ public class SystemCodes extends BaseProtectedEntity
 	 * @return the numberValue
 	 */
 	public final Long getNumberValue() {
-		return this.numberValue;
+		return numberValue;
 	}
 
 	/**
 	 * @param numberValue the numberValue to set
 	 */
-	public final synchronized void setNumberValue(Long numberValue) {
-	    this.numberValue = numberValue;
+	public final void setNumberValue(Long numberValue) {
+		this.numberValue = numberValue;
 	}
 	
-	public final synchronized void incrementNumberValue() {
+	public final void incrementNumberValue() {
 		if (numberValue == null)
-			numberValue = Long.valueOf(1l);
+			numberValue = new Long(1);
 		else
 			numberValue++;
 	}
@@ -248,22 +204,5 @@ public class SystemCodes extends BaseProtectedEntity
 	public String getReference() {
 		// TODO Auto-generated method stub
 		return null;
-	}
-
-	public String getOrderOption() {
-		return orderOption;
-	}
-
-	public void setOrderOption(String orderOption) {
-		this.orderOption = orderOption;
-	}
-
-	public String getOrderFlow() {
-		return orderFlow;
-	}
-
-	public void setOrderFlow(String orderFlow) {
-		this.orderFlow = orderFlow;
-	}
-
+	}	
 }
